--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ height: 60px;
 background-color: #FFF;
 display: flex;
 flex-wrap: wrap;
+z-index: 1000;	
 
 }
 
@@ -21,6 +22,7 @@ background-repeat: no-repeat;
 background-size: 100%;
 background-position: center;
 cursor: pointer;
+z-index: 1000;	
 }
 
 .nav-main ul {
